--- a/bitrise.yml
+++ b/bitrise.yml
@@ -27,7 +27,7 @@ workflows:
           title: Pull artifacts
           inputs:
             - verbose: true
-            - artifact_sources: .*
+            - artifact_sources: stage_2.*
       - script@1.1:
           title: Deploy Artifacts
           inputs:
