--- a/bitrise.yml
+++ b/bitrise.yml
@@ -60,7 +60,9 @@ workflows:
                     ((i++))
                   fi
                 done
-      - deploy-to-bitrise-io@2: {}
+      - deploy-to-bitrise-io@2:
+        inputs:
+        - deploy_path: "${BITRISE_TEST_RESULT_DIR}/test_1/xcodebuild.xml"
   configure_build:
     before_run:
     - 1_git_clone_and_post_clone
