--- a/bitrise.yml
+++ b/bitrise.yml
@@ -60,9 +60,16 @@ workflows:
                     ((i++))
                   fi
                 done
-      - deploy-to-bitrise-io@2:
+
+                cp "${BITRISE_TEST_RESULT_DIR}/test_1/xcodebuild.xml" "$BITRISE_SOURCE_DIR"
+                echo "look for file in source dir"
+                echo "$BITRISE_SOURCE_DIR"
+                ls
+      - custom-test-results-export@0:
           inputs:
-          - deploy_path: "${BITRISE_TEST_RESULT_DIR}/test_1/xcodebuild.xml"
+          - search_pattern: "$BITRISE_SOURCE_DIR/xcodebuild.xml"
+          - test_name: Unit Test
+      - deploy-to-bitrise-io@2: {}
   configure_build:
     before_run:
     - 1_git_clone_and_post_clone
