--- a/bitrise.yml
+++ b/bitrise.yml
@@ -65,9 +65,15 @@ workflows:
                 echo "look for file in source dir"
                 echo "$BITRISE_SOURCE_DIR"
                 ls
+                cd "$BITRISE_SOURCE_DIR"
+                ls
+                cd ..
+
+                cd tmp
+                ls
       - custom-test-results-export@0:
           inputs:
-          - search_pattern: "$BITRISE_SOURCE_DIR/xcodebuild.xml"
+          - search_pattern: "${BITRISE_TEST_RESULT_DIR}/test_1/xcodebuild.xml"
           - test_name: Unit Test
       - deploy-to-bitrise-io@2: {}
   configure_build:
