export test result in test stage2

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -263,13 +263,15 @@ workflows:
                 
                 echo "==== MOVE FILES TO DEPLOY DIR ===="
                 echo "$BITRISE_ARTIFACT_PATHS"
+
+                echo "$BITRISE_DEPLOY_DIR"
                 
                 cd /tmp
 
                 MYDIR=`pwd`/tmp/Users/vagrant/git/xcodebuild.xcresult
                 i=1
                 IFS='|'
-                read -ra FILES <<< "$BITRISE_SOURCE_DIR"
+                read -ra FILES <<< "$BITRISE_DEPLOY_DIR"
                 for f in ${FILES[@]}
                 do
                   if [ "${f: -4}" = ".zip" ]; then
