--- a/bitrise.yml
+++ b/bitrise.yml
@@ -59,6 +59,7 @@ workflows:
                   fi
                 done
 
+                ls "${BITRISE_TEST_RESULT_DIR}/test_1/"
                 cp "${BITRISE_TEST_RESULT_DIR}/test_1/xcodebuild.xml" "$BITRISE_SOURCE_DIR"
                 echo "look for file in source dir"
                 echo "$BITRISE_SOURCE_DIR"
@@ -288,7 +289,7 @@ workflows:
                     
                     echo "--Trainer--"
                     mkdir "${BITRISE_TEST_RESULT_DIR}/test_${i}"
-                    trainer --path "${MYDIR}" --output_directory "${BITRISE_TEST_RESULT_DIR}/test_${i}" || : echo "{ \"test-name\": \"Tests ${i}\" }" > "${BITRISE_TEST_RESULT_DIR}/test_${i}/test-info.json"
+                    trainer --path "${MYDIR}" --output_directory "${BITRISE_TEST_RESULT_DIR}/test_${i}" || : echo "{ \"test-name\": \"Tests ${i}\" }"
             
                     ((i++))
                   fi
@@ -298,13 +299,13 @@ workflows:
                 echo "look for file in source dir"
                 echo "$BITRISE_SOURCE_DIR"
                 ls
-                cd "$BITRISE_SOURCE_DIR"
-                ls
     - custom-test-results-export@0:
         inputs:
         - search_pattern: "$BITRISE_SOURCE_DIR/xcodebuild.xml"
         - test_name: Unit Test
-    - deploy-to-bitrise-io@2: {}
+    - deploy-to-bitrise-io@2.0:
+        inputs:
+        - deploy_path: "$BITRISE_SOURCE_DIR/xcodebuild.xml"
   1_git_clone_and_post_clone:
     steps:
     - activate-ssh-key@4:
